[tool.poetry]
name = "coherentphonons"
version = "0.1.1"
description = "Minimal set of convenience functions for simulating coherent phonons in materials."
authors = ["Anubhab Haldar <ahaldar@bu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.0"
scipy = "^1.8.0"
multimethod = "^1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
