[tool.poetry]
name = "coherentphonons"
version = "0.1.0"
description = "Minimal set of convenience functions for simulating coherent phonons in materials."
authors = ["Anubhab Haldar <ahaldar@bu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.9.3"
multimethod = "^1.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
