[tool.poetry]
name = "coherentphonons"
version = "0.2.0"
description = "Minimal set of convenience functions for simulating coherent phonons in materials."
authors = ["Anubhab Haldar <ahaldar@bu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.0"
scipy = "^1.8.0"
multimethod = "^1.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
